Updated redis config